# rag-service

./: .gitignore  docker-compose.dev.yml  pom.xml
.dockervolumes/mysql/sql/: 01_schema.sql
frontend/src/components/knowledge-base/: document-upload-steps.tsx
rag-ai-service/: .env.example  Dockerfile  Dockerfile.dev  pyproject.toml  requirements.txt
rag-ai-service/app/: main.py
rag-ai-service/app/api/internal/: __init__.py  embed.py
rag-ai-service/app/core/: config.py
rag-common-service/: pom.xml
rag-common-service/src/main/java/com/chuhezhe/ragcommonservice/annotation/: AnonymousAccess.java
rag-common-service/src/main/java/com/chuhezhe/ragcommonservice/config/: FeignConfiguration.java  WebMvcConfig.java
rag-common-service/src/main/java/com/chuhezhe/ragcommonservice/dto/: QueryDocDTO.java  UploadDocDTO.java  UploadDocRecordDTO.java
rag-common-service/src/main/java/com/chuhezhe/ragcommonservice/feign/: UserServiceClient.java
rag-common-service/src/main/java/com/chuhezhe/ragcommonservice/holder/: UserInfoContextHolder.java
rag-common-service/src/main/java/com/chuhezhe/ragcommonservice/interceptor/: AuthInterceptor.java
rag-common-service/src/main/java/com/chuhezhe/ragcommonservice/vo/: DocumentVO.java  KnowledgeBaseVO.java  (+2 more)
rag-common/src/main/resources/i18n/: messages_zh_CN.properties
rag-document-service/: pom.xml
rag-document-service/src/main/java/com/chuhezhe/ragdocumentservice/: RagDocumentServiceApplication.java
rag-document-service/src/main/resources/: bootstrap.yml
rag-document-service/src/main/resources/mapper/: DocumentMapper.xml  ProcessingTaskMapper.xml
rag-document-service/src/test/java/com/chuhezhe/ragdocumentservice/: RagDocumentServiceApplicationTests.java
rag-knowledge-service/: pom.xml
rag-knowledge-service/src/main/java/com/chuhezhe/ragknowledgeservice/: RagKnowledgeServiceApplication.java
rag-knowledge-service/src/main/resources/: bootstrap.yml
rag-knowledge-service/src/test/java/com/chuhezhe/ragknowledgeservice/: RagKnowledgeServiceApplicationTests.java
rag-user-service/: pom.xml
rag-user-service/src/main/java/com/chuhezhe/raguserservice/: RagUserServiceApplication.java
rag-user-service/src/main/resources/: bootstrap.yml
scripts/ralph/: prd.json  progress.txt
(+46 files in other folders)
