# rag-ai-service Python 项目配置（由 uv 管理）
# 包含 RAG 流程中由 Python 负责的部分：FastAPI 网关、文档分块/向量化、聊天/检索、OpenAPI、API Key
#
# 常用命令：
#   uv sync                 # 创建/更新虚拟环境，按 uv.lock 安装依赖
#   uv add <pkg>            # 新增依赖（自动写入 pyproject.toml + uv.lock）
#   uv run python app/main.py  # 在 uv 管理的环境内运行
#   uv export --no-hashes -o requirements.txt   # 生成 Dockerfile 用的 requirements.txt
#
# 注意：requirements.txt 由 uv 导出，不要手工编辑，否则会与 uv.lock 不同步

[project]
name = "rag-ai-service"
version = "0.1.0"
description = "RAG 系统中由 Python 负责的子服务：聊天、检索、向量化、API Key、OpenAPI"
readme = "README.md"
# 与 Dockerfile.dev 的 python:3.11-slim 对齐，同时允许本地用 3.12/3.13 调试
# 上界设到 <3.14 以规避部分依赖（如 chromadb / langchain 系列）尚未跟进的新版本
requires-python = ">=3.11,<3.14"

dependencies = [
    # —— Web 框架 ——
    "fastapi>=0.104.1",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",

    # —— 鉴权 ——
    "python-jose>=3.3.0",
    "BCrypt==4.0.1",
    "email-validator",

    # —— 数据库 / ORM / 迁移 ——
    "SQLAlchemy>=2.0.23",
    "alembic>=1.12.1",
    "mysql-connector-python>=8.0.33",

    # —— 对象存储 ——
    "minio>=7.2.0",

    # —— LangChain 系列与各家模型 ——
    "langchain>=0.3.0",
    "langchain-community>=0.0.10",
    "langchain-openai>=0.3.3",
    "langchain-chroma>=0.0.5",
    "langchain-qdrant>=0.2.0",
    "langchain-deepseek==0.1.1",
    "langchain-ollama==0.2.3",

    # —— 向量库客户端 ——
    "chromadb>=0.6.3",
    "chroma-hnswlib>=0.7.3",

    # —— 文档解析 ——
    "python-docx>=0.8.11",
    "docx2txt==0.8",
    "pypdf>=3.0.0",
    "unstructured>=0.10.30",
    "unstructured[md]>=0.10.0",
    "markdown>=3.0.0",

    # —— 模型 SDK ——
    "openai>=1.30.0",
    "dashscope>=1.13.6",

    # —— 配置/日志/HTTP/序列化（US-001 补齐）——
    "loguru>=0.7.2",                # 日志门面，main.py / nacos 模块在用
    "pydantic-settings>=2.0.0",     # app/core/config.py 的 BaseSettings 来源
    "nacos-sdk-python>=2.0.5",      # 提供 v2.nacos 异步 API（NamingService/ConfigService）
    "httpx>=0.27.0",                # feign client / 部分服务调用使用
    "pyyaml>=6.0",                  # nacos 配置解析、动态配置加载
]

[tool.uv]
# 这是一个应用项目而非可发布的库，告诉 uv 不要尝试把它当成 wheel 构建
# 这样就不需要 [build-system] / hatch 配置，uv sync 也不会去打包 app/
package = false
